--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section>
             <h2>Contact</h2>
             <p>Email: <a href="mailto:thuvoong@gmail.com">thuvoong@gmail.com</a></p>
-            <p>GitHub: <a href="https://github.com/Thu-master">github.com/Thu-master</a></p>
+            <p>GitHub: <a href="https://github.com/Thu-master">https://github.com/Thu-master</a></p>
         </section>
     </main>
     <footer>
